<resources>
    <string name="app_name">FYP_Driving_Lessons</string>
    <string-array name="learner_experience_array">
        <item>I have little or no driving experience</item>
        <item>I have some driving experience</item>
        <item>I have my driving test soon</item>
    </string-array>

    <string-array name="licence_type_array">
        <item>I have a valid Irish learner permit</item>
        <item>I have a full Irish/EU driving licence</item>
        <item>I have an international driving licence</item>
        <item>None of the above</item>
    </string-array>

    <string-array name="car_type_array">
        <item>I would like to use my own car</item>
        <item>I would like to use the instructors car</item>
    </string-array>

    <string-array name="edt_array">
        <item>Yes, my licence was issued after 4th April 2011</item>
        <item>No, my licence was issued before 4th April 2011</item>
    </string-array>

    <string-array name="area_array">
        <item>North Dublin</item>
        <item>South Dublin</item>
        <item>Dublin City Centre</item>

    </string-array>
    <string name="title_activity_learner_details">LearnerDetails</string>
    <string name="title_activity_book_atest">BookATest</string>
    <string name="title_activity_instructor__login">Instructor_Login</string>
    <string name="title_activity_instructo_details">InstructoDetails</string>
    <string name="title_activity_instructor_details">InstructorDetails</string>
    <string name="title_activity_instructors__list">Instructors_List</string>
    <string name="title_activity_learner_register">LearnerRegister</string>
    <string name="learner_login">Learner Login</string>
    <string name="title_activity_driver_login">DriverLogin</string>
    <string name="instructor_login">Instructor Login</string>
    <string name="book_your_test">Book your test</string>
    <string name="driving_lessons">Driving Lessons</string>
    <string name="instructor">Instructor</string>
    <string name="learner">Learner</string>
    <string name="theory_test">Theory Test</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="title_activity_driver_details">DriverDetails</string>
    <string name="title_activity_instructor_register">instructorRegister</string>
    <string name="instructorRegister">Register</string>
    <string name="instructorLogOut">Log Out</string>
    <string name="learner_register">Learner Register</string>
    <string name="learner_details">Learner Details</string>
    <string name="driver_detail">Driver Details</string>
    <string name="title_activity_instructor_bookings">InstructorBookings</string>
    <string name="add_a_booking">Add a Booking</string>
    <string name="date">Date</string>
    <string name="address_2">Address 2</string>
    <string name="address_3">Address 3</string>
    <string name="address2">Address 2</string>
    <string name="address_1">Address 1</string>
    <string name="learner_name">Learner Name</string>
    <string name="time">Time</string>
    <string name="add_booking">Add Booking</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="last_date">30</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="viewDetails">View Details</string>
    <string name="instructors">Instructors</string>
    <string name="make_a_booking">Make a Booking</string>
    <string name="book_a_lesson">Book a Lesson</string>

    <string name="instructor_prompt">Choose Instructors</string>
    <string name="book_a_lessons">Book a Lesson</string>
    <string name="your_name">Your Name</string>
    <string name="instructor_name">Instructor Name</string>
    <string name="submit">Submit</string>
    <string name="number_of_lessons">Number of Lessons</string>
    <string name="choose_instructor_name">Instructor Name</string>
</resources>
